--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -635,3 +635,13 @@
   author={Schwarz, Florian},
   year={2009}
 }
+
+@article{spyropoulos2011,
+  title={Case conflict in Greek free relatives},
+  author={Spyropoulos, Vassilios},
+  journal={Morphology and Its Interfaces},
+  volume={178},
+  pages={21},
+  year={2011},
+  publisher={John Benjamins Publishing}
+}
